changed side nav, fixed double scroll bars
Fix: main app

Fixed visual bug in sidenav, it had double scroll bars. Added overflow:hidden to remove one. (seen in firefox)
[Bug image](http://i.imgur.com/0KvBR3G.png)

--- a/_app/css/chutter.sass
+++ b/_app/css/chutter.sass
@@ -110,6 +110,7 @@ table
 
 md-sidenav
   z-index: 19
+  overflow: hidden
 
 
 post
